--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
    font-family: sans-serif;
 
    font-size: 0.8rem;
-
+   
    letter-spacing: 1px;
 
  }
@@ -61,3 +61,12 @@
    font-weight: bold;
 
  }
+   img {
+
+ width: 400px;
+
+ height: 400px;
+
+ border-radius: 50%;
+
+}
