--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-   border-collapse: collapse;
+table {   border-collapse: collapse;
 
    border: 2px solid rgb(140 140 140);
 
@@ -25,7 +25,7 @@
  tfoot {
 
    background-color: rgb(228 240 245);
-
+    
  }
 
   th,
