--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
-table {   border-collapse: collapse;
+table {
+
+   border-collapse: collapse;
 
    border: 2px solid rgb(140 140 140);
 
    font-family: sans-serif;
 
    font-size: 0.8rem;
-   
+
    letter-spacing: 1px;
 
  }
